# sp4e-andrea-petras

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  compute_error_simulation.py  heat_distribution.csv
homework2/: series.
homework2/src/: CMakeLists.txt  compute_arithmetic.cc  compute_arithmetic.hh  compute_pi.cc  compute_pi.hh  dumper_series.hh  main.cc  main.py  print_series.cc  print_series.hh  riemann_integral.cc  riemann_integral.hh  series.hh  write_series.cc  write_series.hh
homework3/heat-fft-solver/starting_point/: .gitignore  CMakeLists.txt  Doxyfile.bak  compute.hh  compute_boundary.cc  compute_boundary.hh  compute_contact.cc  compute_energy.cc  compute_gravity.cc  compute_gravity.hh  compute_interaction.hh  compute_potential_energy.hh  compute_temperature.cc  compute_temperature.hh  compute_verlet_integration.cc  csv_reader.cc  csv_writer.cc  environment.yml  fft.hh  generate_input.py  googletest  heat_distribution.csv  main.cc  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  matrix.hh  my_types.hh  particle.hh  particles_factory_interface.cc  particles_factory_interface.hh  ping_pong_ball.hh  ping_pong_balls_factory.hh  planet.cc  planet.hh  planets_factory.cc  planets_factory.hh  system.hh  system_evolution.cc  (+5 more)
homework3/heat-fft-solver/starting_point/python/: environment.yml  generate_heat_distribution.py  heat_distribution.csv
homework4/code_snippets/: CMakeLists.txt  pybind.ipynb  pyexample.cpp  pyexample_pybind.cpp  test.py
homework4/starting_point/: .gitmodules  CMakeLists.txt  Doxyfile  circle_orbit.csv  compute_boundary.cc  compute_contact.cc  compute_contact.hh  compute_energy.hh  compute_error_simulation.py  compute_gravity.cc  compute_interaction.cc  compute_interaction.hh  compute_kinetic_energy.cc  compute_kinetic_energy.hh  compute_potential_energy.cc  compute_temperature.cc  compute_temperature.hh  compute_temperature_finite_differences.cc  compute_temperature_finite_differences.hh  compute_verlet_integration.cc  compute_verlet_integration.hh  csv_reader.hh  csv_writer.cc  csv_writer.hh  fft.hh  generate_input_launcher.py  generate_materialpoint_input.py  init.csv  main.cc  main.py  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  matrix.hh  matrix_eigen_addons.hh  my_types.hh  out.csv  outVelocity.csv  particle.cc  (+13 more)
week4/: GMRES.py  cmd.py  environment.yml  optimizer.py
